# Edge-Vision-Language-Model-Server

./: .gitignore  BENCHMARKS.md  Dockerfile  README.md  annotate_result.py  benchmark.py  docker-compose.yml  image.txt  inference.sh  payload.json  pyproject.toml
.github/workflows/: test.yml
app/: device.py  main.py  postprocess.py  redis_utils.py  router.py  schemas.py  vision.py  vlm.py  worker.py
csrc/: nms.cpp  setup.py
tests/: conftest.py  test_api.py  test_postprocess.py  test_router.py  test_vision.py  test_vlm.py  test_worker.py
