# pyproject.toml
[project]
name = "edge-vlm-server"
version = "0.1.0"
description = "High-performance Edge VLM Inference Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "requests>=2.30.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]